mudei a imagem do perfil e uma rede social

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <label class="naoSelecionavel" onclick="darkpt()" for="">Dark Pink</label>
     </p>
     <div class="container">
-        <img class="avatar" src="https://i.pinimg.com/564x/9a/7c/f1/9a7cf125bc6428f79f7bf487565bccfd.jpg" alt="Imagem do Ratattouile com os olhos esbugalhados">
+        <!-- <img class="avatar" src="https://i.pinimg.com/564x/9a/7c/f1/9a7cf125bc6428f79f7bf487565bccfd.jpg" alt="Imagem do Ratattouile com os olhos esbugalhados"> -->
+        <img class="avatar" src="https://i.pinimg.com/564x/a5/a9/24/a5a9244ca697bdd4438f45f562c345d4.jpg" alt="Imagem do Pica Pau de Óculos">
         <h1>
             Rafael Forato
         </h1>
@@ -37,7 +38,7 @@
         </p>
         <ul>
             <li>
-                <a href="https://facebook.com/rafael.forato.1" target="_blank">🇫 Facebook</a>
+                <a href="https://instagram.com/rafaa.ffz">📷 Insta</a>
             </li>
             <li>
                 <a href="https://twitter.com/fouuzekk" target="_blank">🐦 Twitter</a>
