--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </p>
         <ul>
             <li>
-                <a href="https://instagram.com/rafaa.ffz">📷 Insta</a>
+                <a href="https://instagram.com/rafaa.ffz" target="_blank">📷 Insta</a>
             </li>
             <li>
                 <a href="https://twitter.com/fouuzekk" target="_blank">🐦 Twitter</a>
