--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- <img class="avatar" src="https://i.pinimg.com/564x/9a/7c/f1/9a7cf125bc6428f79f7bf487565bccfd.jpg" alt="Imagem do Ratattouile com os olhos esbugalhados"> -->
         <img class="avatar" src="https://i.pinimg.com/564x/a5/a9/24/a5a9244ca697bdd4438f45f562c345d4.jpg" alt="Imagem do Pica Pau de Óculos">
         <h1>
-            Rafael Forato
+            Rafael
         </h1>
         <p class="username">
             @rafaa.ffz
